--- a/themes/etch/layouts/partials/head.html
+++ b/themes/etch/layouts/partials/head.html
@@ -26,6 +26,7 @@
 
     {{ $css := $resources | resources.Concat "css/style.css" | minify }}
     {{ printf `<link rel="stylesheet" href="%s">` $css.RelPermalink | safeHTML }}
+    {{ if .Params.math }}{{ partial "math.html" . }}{{ end }}
 
     <link rel="canonical" href="{{ .Permalink }}" />
     <title>{{ .Title }}</title>
