--- a/themes/etch/assets/css/main.css
+++ b/themes/etch/assets/css/main.css
@@ -10,7 +10,7 @@ body {
     font-size: 16px;
     font-size: 1.6rem;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    color: #313a3d;
+    color: #000000;
     width: 100%;
     margin: 0 auto;
     padding: 0 16px;
@@ -23,12 +23,13 @@ header#banner {
 }
 
 header#banner a {
-    color: #313a3d;
+    color: #000000;
     text-decoration: none;
 }
 
 header#banner a:hover {
     text-decoration: underline;
+    color: #2aa198;
 }
 
 header#banner h2 {
@@ -56,16 +57,17 @@ header#banner nav ul li {
 }
 
 header#banner nav ul li a {
-    color: #454545;
+    color: #000000;
 }
 
 main#content a {
-    color: #007dfa;
+    color: #859900;
     text-decoration: none;
 }
 
 main#content a:hover {
     text-decoration: underline;
+    color: #2aa198;
 }
 
 main#content h1,
@@ -93,7 +95,7 @@ main#content h6 + p {
 }
 
 main#content p {
-    color: #394548;
+    color: #000000;
     margin: 16px 0;
 }
 
@@ -132,7 +134,7 @@ main#content ul#posts li a {
 }
 
 main#content ul#posts li a:hover {
-    color: #369aff;
+    color: #2aa198;
 }
 
 main#content ul#posts li a:hover small {
