--- a/themes/etch/layouts/about/single.html
+++ b/themes/etch/layouts/about/single.html
@@ -1,29 +1,28 @@
 {{ define "main" }}
-{{- $aboutPage := .Site.GetPage "/about" -}}
-{{- if $aboutPage -}}
 <article>
-    {{- if $aboutPage.Params.image -}}
+    <header id="post-header">
+        <h1>{{ .Title }}</h1>
+    </header>
+    {{- if .Params.image -}}
     <div class="side-by-side-container" style="margin: 0;">
         <div class="side-by-side-text" style="flex: 5;">
-            {{ $aboutPage.Content }}
+            {{ .Content }}
         </div>
-        {{- $imagePath := $aboutPage.Params.image -}}
+        {{- $imagePath := .Params.image -}}
         {{- if not (hasPrefix $imagePath "/") -}}
             {{- $imagePath = printf "/%s" $imagePath -}}
         {{- end -}}
         <div class="side-by-side-image" style="flex: 2;">
             <img 
                 src="{{ $imagePath }}" 
-                alt="{{ $aboutPage.Params.image_alt | default "Profile Picture" }}"
+                alt="{{ .Params.image_alt | default "Profile Picture" }}"
                 style="width: 250px; max-width: 100%; margin-bottom: 12px; margin-top: 20px; margin-left: 5px;"
             >
         </div>
     </div>
     {{- else -}}
-    {{ $aboutPage.Content }}
+    {{ .Content }}
     {{- end -}}
 </article>
-{{- else -}}
-{{ .Content }}
-{{- end -}}
 {{ end }}
+
